[package]
name = "rs485"
version = "0.1.0"
authors = ["Michał Hanusek <mhanusek@o2.pl>"]
edition = "2018"

[dependencies]
#tokio-serial = "4.3.3"
serialport = "4.0.0"
hex-slice = "0.1.4"
bitflags = "1.2.1"
libc = "0.2.69"
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
bytes = "=0.5.4"
crc16 = "=0.4.0"
byteorder = "=1.3.2"


